--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,13 @@ margin: 10px;
 width: 260px;
 
 }
+/* instructions div */
+.instructions{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: peachpuff;
+    color: green; 
+    width: 360px;
+    padding: 20px;
+    margin: 10px;
+    
+}
