making the page layout.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,12 @@ img{
     height: 55px;
     width: 55px;
 }
+/* score display message */
+.scoreDisplay{
+    background-color: rgb(67, 119, 93);
+    color: white;
+    width: 200px;
+    height: 20px;
+    padding: 5px;
+    margin: 10px;
+}
